internet-access-checker-notifier/styles.css
main {
  font-family:
    "Roboto Condensed", Roboto, Inconsolata, Inter, "Noto Sans", "Open Sans",
    Helvetica, Aptos, "Liberation Sans", Arial, sans-serif;
  font-size: 0.8rem;
  max-width: 95%;
  padding-left: 1rem;
  padding-right: 1rem;
  text-align: center;
}

.flexRow {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: 0.5rem;
}

input[type="checkbox"] {
  vertical-align: middle;
  margin-bottom: 0.4rem;
  height: 1.5rem;
  width: 1.5rem;
}

input[type="number"] {
  width: 2rem;
}

input[type="button"] {
  font-size: 1.5rem;
  height: fit-content;
}

